--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,11 @@ attrs==25.4.0
 blinker==1.9.0
 cachetools==6.2.1
 certifi==2025.10.5
+cffi==2.0.0
 charset-normalizer==3.4.4
 click==8.3.0
+cryptography==46.0.3
+deprecation==2.1.0
 distro==1.9.0
 docstring_parser==0.17.0
 gitdb==4.0.12
@@ -25,6 +28,7 @@ jiter==0.11.1
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
 MarkupSafe==3.0.3
+multidict==6.7.0
 narwhals==2.10.0
 numpy==2.3.4
 openai==2.6.1
@@ -32,22 +36,32 @@ packaging==25.0
 pandas==2.3.3
 pillow==11.3.0
 portalocker==2.10.1
+postgrest==2.22.3
+propcache==0.4.1
 protobuf==6.33.0
 pyarrow==22.0.0
+pycparser==2.23
 pydantic==2.12.3
 pydantic_core==2.41.4
 pydeck==0.9.1
+PyJWT==2.10.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 pytz==2025.2
 qdrant-client==1.14.2
+realtime==2.22.3
 referencing==0.37.0
 requests==2.32.5
 rpds-py==0.28.0
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
+storage3==2.22.3
 streamlit==1.50.0
+StrEnum==0.4.15
+supabase==2.22.3
+supabase-auth==2.22.3
+supabase-functions==2.22.3
 tenacity==9.1.2
 toml==0.10.2
 tornado==6.5.2
@@ -56,3 +70,5 @@ typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.5.0
+websockets==15.0.1
+yarl==1.22.0
