--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ cryptography==46.0.3
 deprecation==2.1.0
 distro==1.9.0
 docstring_parser==0.17.0
+et_xmlfile==2.0.0
 gitdb==4.0.12
 GitPython==3.1.45
 grpcio==1.76.0
@@ -32,6 +33,7 @@ multidict==6.7.0
 narwhals==2.10.0
 numpy==2.3.4
 openai==2.6.1
+openpyxl==3.1.5
 packaging==25.0
 pandas==2.3.3
 pillow==11.3.0
